tests/snapshots/examples_fixtures/base__base_alias_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_alias_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/base/base_alias_error.flx:4:1
  |
4 | print(1);
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/base/base_alias_error.flx:4:1
  |
4 | print(1);
  | ^^^^^^^^^
  | --------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
== stdout ==
<not executed>
